--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
-/* Style général pour le header */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/*..................header.................. */
 header {
-  background-image: url("fondecran/iStock-1455862033.jpg"); /* Ajoutez votre image de fond */
+  position: relative;
+  background-image: url("fondecran/iStock-1455862033.jpg");
   background-size: cover;
   background-position: center;
   height: 330px;
@@ -16,17 +22,18 @@ header {
 .logo {
   width: 300px;
   height: 300px;
-  margin-right: 15px;
+  margin-top: 10px;
 }
 
 nav {
-  margin-top: auto; /* Place la barre de navigation en bas du header */
-  max-width: 800px; /* Définir une largeur maximale pour la barre de navigation */
-  margin-left: auto; /* Centrer horizontalement la barre de navigation */
-  margin-right: auto; /* Centrer horizontalement la barre de navigation */
+  position: absolute;
+  top: 240px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 nav ul {
+  display: flex;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -37,16 +44,22 @@ nav ul li {
 }
 
 nav ul li a {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: "Inika", serif;
   font-size: 32px;
   width: 200px;
   height: 80px;
-  background-color: rgba(218, 232, 225); /* Couleur du fond */
+  background-color: rgba(218, 232, 225);
   text-align: center;
   line-height: 1cm;
   text-decoration: none;
-  color: #54331e; /* Couleur du texte */
+  color: #54331e;
+}
+
+nav ul li.active a {
+  background-color: #f78f2e; /* Change la couleur de fond pour la classe active */
 }
 
 /*............................admin......................................*/
@@ -66,5 +79,195 @@ a.admin {
   color: white;
   top: 10px;
   right: 80px;
-  z-index: 1109;
+  z-index: 1000;
+}
+/*........................Principale.............................*/
+.background-section {
+  background-image: url("fondecran/fondPrincipal.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.presentation-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-container {
+  width: 700px;
+  text-align: center;
+}
+
+.text-container h1 {
+  font-family: "Zen Tokyo Zoo", sans-serif;
+  font-size: 48px;
+  color: #197c2f;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.text-container p {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: #54331e;
+}
+
+.image-container {
+  margin-top: 100px;
+}
+
+/*...........................Section centrale........................*/
+
+.centered-section {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.centered-section h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
+  color: #54331e;
+}
+
+.centered-section p {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  color: #54331e;
+}
+
+/*.............................3container...........................*/
+.container {
+  text-align: center;
+}
+
+.rectangle {
+  display: inline-block;
+  margin: 20px;
+  position: relative;
+}
+
+.rectangle img {
+  width: 350px;
+  height: 350px;
+}
+
+.description {
+  bottom: -152px;
+  left: 0;
+  width: 350px;
+  height: 150px;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 10px;
+  border: 2px solid black;
+  border-top: none;
+}
+
+.description p {
+  text-align: center;
+  margin-bottom: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #54331e;
+}
+
+.description a {
+  display: block;
+  text-align: right;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: #197c2f;
+  text-decoration: none;
+}
+
+.description img {
+  width: 25px;
+  height: 25px;
+}
+/*................form........................*/
+
+.transparent-rectangle {
+  background-color: rgba(255, 255, 255, 0.5);
+  height: auto;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+h3 {
+  font-size: 32px;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+#pseudo,
+#email {
+  max-width: 400px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+/*.....................CommentsSpace............*/
+.comments-space {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 20px;
+}
+
+/*---------------- Footer ----------------*/
+
+.custom-footer {
+  background-image: url("fondecran/fondEcranFooter.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  padding: 20px 0;
+}
+
+/* Logo */
+.logo {
+  width: 250px;
+  height: 250px;
+}
+
+/* Besoin d'aide */
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+}
+
+.right-column {
+  border-left: 1px solid #000;
+}
+
+.contact-button {
+  width: 100%;
+  max-width: 200px;
+  margin-top: 10px;
+}
+
+/* Liens pratiques */
+.practical-links a {
+  display: block;
+  margin-bottom: 5px;
+}
+
+/* Icônes de suivi */
+
+.social-icon {
+  margin-top: 20px;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+/* Copyright */
+.small {
+  font-size: 14px;
 }
