--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a.admin {
   background-image: url("fondecran/fondPrincipal.jpg");
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
 }
 
 .presentation-container {
@@ -270,4 +271,41 @@ h3 {
 /* Copyright */
 .small {
   font-size: 14px;
+}
+
+/*Formulaire de contact*/
+
+.title-form {
+  font-family: "Zen Tokyo Zoo", sans-serif;
+  color: #54331e;
+  font-size: 40px;
+  text-align: center;
+  padding: 30px;
+}
+.Formulaire {
+  max-width: 700px;
+  margin: 50px auto;
+  background-color: #dae8e1;
+  padding: 20px;
+  border-radius: 10px;
+}
+.form-group {
+  margin-bottom: 20px;
+}
+.form-button {
+  max-width: 250px;
+  height: 40px;
+  border-radius: 10px;
+  background: white;
+}
+
+.form-label {
+  font-family: "Roboto", sans-serif;
+}
+
+.screen {
+  background-image: url("fondecran/paysage.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
