--- a/style.css
+++ b/style.css
@@ -19,10 +19,9 @@ header {
   align-items: center;
 }
 
-.logo {
-  width: 300px;
-  height: 300px;
-  margin-top: 10px;
+.logo img {
+  max-width: auto;
+  height: auto;
 }
 
 .header-nav {
@@ -59,10 +58,19 @@ header {
 }
 
 .header-nav ul li.active a,
-.service-nav ul li.active {
+.service-nav ul li.active,
+.vertical-navbar ul li.active a,
+.vertical-navbar ul li.active {
   background-color: #f78f2e; /* Change la couleur de fond pour la classe active */
 }
 
+.burger-container {
+  display: none;
+}
+
+.vertical-navbar {
+  display: none;
+}
 /*............................admin......................................*/
 a.admin {
   position: absolute;
@@ -214,68 +222,63 @@ h3 {
 }
 
 /*.....................CommentsSpace............*/
-.comments-space {
+.comment-info h4,
+.comment-content h4 {
+  margin-top: 0;
+}
+
+.comment-content {
   background-color: #f2f2f2;
   padding: 20px;
   border-radius: 10px;
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-/*---------------- Footer ----------------*/
-
+/* Footer */
 .custom-footer {
   background-image: url("fondecran/fondEcranFooter.jpg");
   background-size: cover;
   background-position: center;
-  width: 100%;
-  padding: 20px 0;
+  padding: 50px 0;
 }
 
-/* Logo */
-.logo {
-  width: 250px;
-  height: 250px;
+.logo-footer {
+  max-width: 100%;
+  height: auto;
 }
 
-/* Besoin d'aide */
-.title {
-  font-size: 24px;
-  font-weight: bold;
-  font-family: "Roboto", sans-serif;
-}
-
-.right-column {
-  border-left: 1px solid #000;
-}
-
-.contact-button {
-  width: 100%;
-  max-width: 200px;
-  margin-top: 10px;
-}
-
-/* Liens pratiques */
-.practical-links a {
-  display: block;
-  margin-bottom: 5px;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
+.footer-title {
   font-size: 20px;
   font-weight: bold;
 }
 
-/* Icônes de suivi */
+.contact-button {
+  margin-top: 15px;
+}
+
+.social-icons {
+  margin-top: 15px;
+}
 
 .social-icon {
-  margin-top: 20px;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   margin-right: 10px;
 }
 
-/* Copyright */
-.small {
-  font-size: 14px;
+.list-unstyled {
+  padding-left: 0;
+  list-style: none;
+}
+
+.custom-list li a {
+  margin-bottom: 10px;
+  text-decoration: none;
+}
+
+.text-muted {
+  margin-top: 10px;
 }
 
 /*Formulaire de contact*/
@@ -301,7 +304,8 @@ h3 {
   max-width: 250px;
   height: 40px;
   border-radius: 10px;
-  background: white;
+  color: white;
+  background-color: #197c2f;
 }
 
 .form-label {
@@ -325,15 +329,15 @@ h3 {
 }
 
 .service-nav {
-  /* Modification de la classe ici */
   background-color: #dae8e1;
-  max-height: 450px;
+  max-height: 500px;
   max-width: 250px;
 }
 
 .service-nav ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 .service-nav ul li {
@@ -393,19 +397,6 @@ h3 {
 .description,
 .service {
   margin-left: 20px;
-}
-
-@media (max-width: 768px) {
-  .service1 {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  .service1 .description {
-    margin-left: 0;
-    margin-top: 20px;
-  }
 }
 
 .service img {
@@ -488,4 +479,257 @@ h3 {
 
 .animals-intro {
   background-color: rgba(0, 0, 0, 0.25);
+}
+
+@media (max-width: 834px) {
+  /*header*/
+  header {
+    height: auto;
+    width: auto;
+  }
+
+  .header-nav {
+    display: none;
+  }
+
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logo img {
+    width: 100px;
+    height: 90px;
+  }
+
+  .burger-container {
+    /* Positionnement du burger en bas à droite du header */
+    position: absolute;
+    top: 60px;
+    right: 0;
+    margin: 10px;
+    display: block;
+  }
+
+  /* Styles pour la barre de navigation verticale uniquement pour les appareils mobiles */
+  .vertical-navbar {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    overflow-y: auto; /* Pour permettre le défilement si nécessaire */
+    padding-top: 60px; /* Espace pour le titre */
+    z-index: 1000;
+    transition: transform 0.3s ease-in-out; /* Animation de transition */
+  }
+
+  .vertical-navbar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .vertical-navbar a {
+    display: block;
+    color: #54331e;
+    text-decoration: none;
+    font-size: 18px; /* Taille de la police */
+    padding: 15px 20px; /* Espacement */
+  }
+
+  .vertical-navbar a:hover {
+    background-color: #f78f2e;
+  }
+
+  #close-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: none;
+    color: #54331e;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
+  /*........................PrincipaleMobileFormat.............................*/
+  .text-container {
+    width: auto;
+    text-align: center;
+  }
+
+  .text-container h1 {
+    font-size: 32px;
+    margin-bottom: 10px;
+    margin-top: 30px;
+  }
+
+  .text-container p {
+    font-size: 10px;
+    font-weight: bold;
+    color: #54331e;
+  }
+
+  .container {
+    text-align: center;
+  }
+
+  /*...........................Section centrale........................*/
+
+  .centered-section h2 {
+    font-size: 20px;
+  }
+
+  .centered-section p {
+    font-size: 12px;
+  }
+
+  .rectangle img {
+    width: auto;
+    height: auto;
+  }
+
+  .description-contain {
+    width: auto;
+    height: auto;
+  }
+
+  .description-contain p {
+    font-size: 10px;
+    color: #54331e;
+  }
+
+  .description-contain a {
+    font-size: 10px;
+  }
+
+  .description-contain img {
+    width: 25px;
+    height: 25px;
+  }
+
+  .image-container {
+    margin-top: 50px;
+  }
+  /*commentSpace*/
+  .comment-info h4,
+  .comment-content h4,
+  .comment-content p {
+    font-size: 12px;
+  }
+  /*animalsFormatMobile*/
+  .animals-title {
+    font-size: 24px;
+    margin-top: 10px;
+  }
+
+  .intro-animals {
+    font-size: 10px;
+    margin-top: 10px;
+  }
+
+  /*ServiceMobileFormat*/
+
+  /*barre nav verticale mobile service*/
+
+  .service-container {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .service-nav {
+    max-width: none;
+  }
+
+  .service-nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .service-nav ul li {
+    flex: 0 0 50%;
+    padding: 10px;
+  }
+  .section-services {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 30px;
+  }
+
+  .service1,
+  .service2,
+  .service3,
+  .service4,
+  .service5,
+  .service6 {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .description,
+  .service {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+
+  .service img {
+    max-width: 100%;
+    max-height: 250px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+
+  .description {
+    width: 80%;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .serv-title {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+
+  .description p {
+    font-size: 14px;
+  }
+  /*footer Mobile*/
+
+  .logo-footer {
+    width: 150px;
+    height: auto;
+  }
+
+  .contact-button {
+    margin-bottom: 10px;
+    max-width: 200px;
+  }
+
+  .footer-title {
+    font-size: 12px;
+  }
+
+  .link-secondary {
+    font-size: 10px;
+  }
+
+  .social-icon {
+    width: 20px;
+    height: 20px;
+  }
+  .text-muted {
+    font-size: 8px;
+  }
+  .service-divider {
+    width: 80%;
+    border-bottom: 2px solid #54331e; /* Couleur et style de la séparation */
+    margin: 20px auto;
+  }
 }
