gestion formulaire de contact + javascript fonctions

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -31,14 +31,7 @@
             >
           </li>
           <li>
-            <a
-              href="{{
-                path(
-                  'app_formulaire
-            '
-                )
-              }}"
-              class="link-secondary"
+            <a href="{{ path('app_formulaire') }}" class="link-secondary"
               >CONTACT</a
             >
           </li>
@@ -83,5 +76,3 @@
     </div>
   </div>
 </footer>
-
-<script src="{{ asset('assets/script.js') }}"></script>
