--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,9 +11,29 @@ title %}Bienvenue à Arcadia{% endblock %} {% block content %}
               Bienvenue à Arcadia, le zoo où la nature prend vie ! Plongez dans
               un monde fascinant où la diversité des habitats rencontre la
               richesse de la faune.<br />
+
               Explorez la majesté de la savane, où le rugissement des lions
               résonne au loin, tandis que les éléphants parcourent paisiblement
-              les vastes plaines...
+              les vastes plaines. Observez avec émerveillement la grâce des
+              girafes se nourrissant des feuilles des acacias.<br />
+
+              Dans les profondeurs mystérieuses de la jungle, rencontrez les
+              regards pénétrants des tigres, rois indomptables de la canopée.
+              Laissez-vous enchanter par la mélodie des singes hurleurs et la
+              splendeur colorée des aras.<br />
+
+              En gravissant les sommets escarpés de nos montagnes, découvrez le
+              monde secret des bouquetins et des chamois, maîtres de
+              l'escalade.<br />
+
+              Plongez dans les étendues arides et envoûtantes du désert, où le
+              cobra royal règne en souverain solitaire. Émerveillez-vous devant
+              la résilience des dromadaires, symboles de l'adaptation aux
+              conditions extrêmes, ainsi que devant le regard fier du fennec, de
+              la vipère du désert et de l'iguane du désert.<br />
+
+              Explorez les marais luxuriants et secrets, où les hippopotames se
+              prélassent paisiblement parmi les roseaux.
             </p>
           </div>
         </div>
