--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,11 +24,6 @@
     <main>{% block content %}{% endblock %}</main>
 
     {% include 'footer.html.twig' %}
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-wfXqK2pRjpkJHfvWaRlpoZQcr2ZcdUzP4uEFrxQGYJjcQyUbOOwER5QDdNc0sA2Q"
-      crossorigin="anonymous"
-    ></script>
+    <script src="{{ asset('assets/script/script.js') }}"></script>
   </body>
 </html>
