--- a/templates/mountain/index.html.twig
+++ b/templates/mountain/index.html.twig
@@ -69,7 +69,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="assets/montagne/aigleroyal.jpg"
+          src="{{ asset('assets/images/montagne/aigleroyal.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -79,7 +79,7 @@ content %}
     <div class="service2">
       <article class="service">
         <img
-          src="assets/montagne/bouquetin.jpg"
+          src="{{ asset('assets/images/montagne/bouquetin.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -126,14 +126,20 @@ content %}
         </div>
       </article>
       <article class="service">
-        <img src="assets/montagne/chamois.jpg" onclick="agrandirImage(this)" />
+        <img
+          src="{{ asset('assets/images/montagne/chamois.jpg') }}"
+          onclick="agrandirImage(this)"
+        />
       </article>
     </div>
     <hr class="service-divider" />
 
     <div class="service4" id="loup">
       <article class="service">
-        <img src="assets/montagne/loup.jpg" onclick="agrandirImage(this)" />
+        <img
+          src="{{ asset('assets/images/montagne/loup.jpg') }}"
+          onclick="agrandirImage(this)"
+        />
       </article>
       <article class="description">
         <p>
