--- a/templates/savane/index.html.twig
+++ b/templates/savane/index.html.twig
@@ -71,7 +71,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('savane/elephant.jpg') }}"
+          src="{{ asset('assets/images/savane/elephant.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -81,7 +81,7 @@ content %}
     <div class="service2">
       <article class="service">
         <img
-          src="{{ asset('savane/girafe.jpg') }}"
+          src="{{ asset('assets/images/savane/girafe.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -143,7 +143,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('savane/guepard.jpg') }}"
+          src="{{ asset('assets/images/savane/guepard.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -153,7 +153,7 @@ content %}
     <div class="service4" id="lion">
       <article class="service">
         <img
-          src="{{ asset('savane/lion.jpg') }}"
+          src="{{ asset('assets/images/savane/lion.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -203,7 +203,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('savane/rhinoceros.jpg') }}"
+          src="{{ asset('assets/images/savane/rhinoceros.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -213,7 +213,7 @@ content %}
     <div class="service6">
       <article class="service">
         <img
-          src="{{ asset('savane/zèbre.jpg') }}"
+          src="{{ asset('assets/images/savane/zèbre.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
