--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,35 +1,5 @@
-<a href="#" class="admin">Admin</a>
-<div class="login-form">
-  <form action="{{ path('app_login') }}" method="POST">
-    <input
-      type="text"
-      name="_username"
-      placeholder="Nom d'utilisateur"
-      value="{{ last_username }}"
-      required
-    />
-    <input
-      type="password"
-      name="_password"
-      placeholder="Mot de passe"
-      required
-    />
-    <select name="role">
-      <option value="admin">Admin</option>
-      <option value="employee">Employé</option>
-      <option value="veterinarian">Vétérinaire</option>
-    </select>
-
-    <!-- Champ CSRF obligatoire pour la sécurité -->
-    <input
-      type="hidden"
-      name="_csrf_token"
-      value="{{ csrf_token('authenticate') }}"
-    />
-    <button type="submit">Se connecter</button>
-  </form>
-</div>
 <header>
+  <a href="/login" id="adminLink" class="admin">Admin</a>
   <div class="background-image"></div>
   <div class="header-container">
     <div class="logo">
